# Combat-UGV

./: README.md  environment.yml
encrypted_rf_hopping/: launch_rf_hopping_gui.sh  setup.cfg  setup.py
encrypted_rf_hopping/encrypted_rf_hopping/: encrypted_rf_hopping_pub_gui.py
encrypted_rf_hopping/install/: local_setup.sh  setup.ps1  setup.sh
encrypted_rf_hopping/install/encrypted_rf_hopping/lib/encrypted_rf_hopping/: pub_gui  sub_gui
encrypted_rf_hopping/install/encrypted_rf_hopping/share/encrypted_rf_hopping/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
encrypted_rf_hopping/launch/: rf_hopping_gui.launch.py
encrypted_rf_hopping/log/: latest_build
ev_calculation/: index.html  script.js  style.css
ugv_eventcam/: event_tracker.py  run_snn_tracker.sh  run_tracker.sh  snn_tracker.py
ugv_pindad_bringup/: package.xml  setup.cfg  setup.py
ugv_pindad_bringup/config/: controllers.yaml  lidar_view.rviz  nav2_ouster_3d.rviz  nav2_ouster_view.rviz  ouster_lidar_view.rviz
ugv_pindad_bringup/launch/: forest_simulation.launch.py  gazebo.launch.py  lidar_simulation.launch.py  ouster_lidar_simulation.launch.py  teleop.launch.py
ugv_pindad_bringup/meshes/: UGV.stl
ugv_pindad_bringup/models/baylands/: model.config  model.sdf
ugv_pindad_bringup/models/terrain/: model.config  model.sdf
ugv_pindad_bringup/scripts/: camera_viz.py  generate_forest.py  launch_forest_simulation.sh  launch_lidar_simulation.sh  launch_ouster_simulation.sh  launch_simulation.sh
ugv_pindad_bringup/ugv_pindad_bringup/: __init__.py  qt_control_panel.py  wasd_teleop_node.py
ugv_pindad_bringup/urdf/: ugv_pindad.urdf.xacro  ugv_pindad_lidar.urdf.xacro  ugv_pindad_ouster.urdf.xacro
ugv_pindad_bringup/worlds/: baylands.sdf  forest.sdf  nav2_complex.world  obstacle.world
