<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>encrypted_rf_hopping</name>
  <version>1.0.0</version>
  <description>AES-256 Encrypted ROS2 Publisher/Subscriber with GNU Radio Anti-Jam Frequency Hopping</description>
  <maintainer email="irman@local.host">irman</maintainer>
  <license>GPL-3.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-cryptography</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
